# slidev-mcp

./: .env.example  .env.production.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: build-and-push.yml  ci.yml  deploy-docs.yml  deploy.yml  restore.yml
builder/: Dockerfile  build-job.ts  bunfig.toml  export-job.ts  package.json  server.ts  themes.json
builder/scripts/: init-themes.ts  validate-themes.ts
builder/template/: package.json  slides.md
docker/: Dockerfile.mcp  nginx.conf
docs/: contributing.md  index.md  package.json
docs/.vitepress/: config.ts  themes.ts
docs/.vitepress/theme/: HomeLayout.vue  HomePage.vue  HomeVideo.vue  custom.css  index.ts
docs/.vitepress/theme/components/: ThemeCard.vue  ThemeGallery.vue
docs/clients/: chatgpt.md  claude-code.md  claude-desktop.md  cursor.md  gemini-cli.md  index.md  jetbrains.md  opencode.md  vscode.md  windsurf.md  zed.md
docs/guide/: configuration.md  deployment.md  getting-started.md  what-is-slidev-mcp.md
docs/public/: CNAME
docs/reference/: limitations.md  resources.md  themes.md  tools.md
scripts/: backup.sh  bootstrap.sh  deploy.sh  fetch-theme-readmes.py  provision.sh  restore.sh
src/slidev_mcp/: __main__.py  builder.py  config.py  db.py  errors.py  gallery.py  models.py  resource_registry.py  server.py  sessions.py  tools.py
src/slidev_mcp/resources/: installed_themes.md  theme_guide.md
src/slidev_mcp/resources/examples/: full_demo.md  minimal.md
src/slidev_mcp/resources/themes/: academic.md  apple-basic.md  bricks.md  default.md  eloc.md  field-manual.md  frankfurt.md  geist.md  neocarbon.md  neversink.md  nord.md  penguin.md  purplin.md  scholarly.md  seriph.md  shibainu.md  swiss-ai-hub.md  the-unnamed.md  unicorn.md  vibe.md  vuetiful.md  zhozhoba.md
tests/: conftest.py  test_builder.py  test_config.py  test_e2e.py  test_errors.py  test_models.py  test_resource_registry.py  test_server.py  test_sessions.py  test_tools.py
